package keeper

import (
	"context"

	"parrots/x/parrots/types"

	sdk "github.com/cosmos/cosmos-sdk/types"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

func (k Keeper) GetBeaksCount(goCtx context.Context, req *types.QueryGetBeaksCountRequest) (*types.QueryGetBeaksCountResponse, error) {
	if req == nil {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	ctx := sdk.UnwrapSDKContext(goCtx)

	count := k.GetBeakCount(ctx)

	return &types.QueryGetBeaksCountResponse{Count: count}, nil
}
